# feanorfs

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.relay  Dockerfile.relay-binary  LICENSE  README.md  SECURITY.md  TODO.md  deny.toml  dist-workspace.toml  release-plz.toml
.github/: AGENTS.md  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  desktop-release.yml  npm-release.yml  relay-image.yml  release-plz.yml  release.yml  security.yml  tray-release.yml  unsigned-desktop-release.yml
agent-core/: AGENTS.md  Cargo.toml
agent-core/src/: agent.rs  api.rs  conflict_artifacts.rs  conflicts.rs  crypto.rs  ctx.rs  durable.rs  fs_util.rs  head.rs  history.rs  hub.rs  hub_state.rs  large_file.rs  lib.rs  local.rs  lock.rs  object_gc.rs  objects.rs  paths.rs  prepared_tree.rs  snapshot.rs  snapshot_diff.rs  state.rs  sync_pass.rs  tree_reconcile.rs  tunnel.rs  workspace_layout.rs
agent-core/src/agent/: AGENTS.md  check.rs  diff.rs  land.rs  proposal.rs  refresh.rs  spawn.rs  tests.rs
agent-core/src/agent/land/: materialize.rs  publish.rs
agent-core/src/hub/: AGENTS.md  http.rs  routes_legacy.rs  routes_objects.rs  routes_workspace.rs  tests.rs
agent-core/src/hub_state/: AGENTS.md  migration.rs  store.rs
agent-core/src/local/: AGENTS.md  access.rs  cache.rs  config.rs  conflicts.rs  credential_platform.rs  credentials.rs  private_file.rs  scan.rs  walker.rs
agent-core/src/local/tests/: access.rs  cache.rs  config.rs  conflicts.rs  durability.rs  mod.rs  scanning.rs
agent-core/src/state/: AGENTS.md  durable.rs
agent-core/src/state/tests/: atomic.rs  mod.rs  model.rs  persistence.rs
agent-core/tests/: heads.rs  hub_tests.rs  objects.rs  snapshots.rs
bindings/ts/: Cargo.toml  README.md  api.mjs  contract.d.ts  index.d.ts  index.js  native.js  package-lock.json  package.json
bindings/ts/npm/darwin-arm64/: README.md  package.json
bindings/ts/npm/darwin-x64/: README.md  package.json
bindings/ts/npm/linux-arm64-gnu/: README.md  package.json
bindings/ts/npm/linux-x64-gnu/: README.md  package.json
bindings/ts/npm/win32-x64-msvc/: README.md  package.json
bindings/ts/scripts/: assemble-packages.mjs  publish-packages.mjs
bindings/ts/src/: lib.rs
bindings/ts/test/: loop.mjs  publish-packages.mjs
client/: AGENTS.md  CHANGELOG.md  Cargo.toml  build.rs
client/src/: agent.rs  api.rs  commands.rs  conflict_artifacts.rs  conflicts.rs  ctx.rs  endpoint.rs  fs_util.rs  hub.rs  hub_transfer.rs  join_preflight.rs  lib.rs  local.rs  lock.rs  main.rs  migrate.rs  predictive.rs  recent.rs  recovery.rs  summary.rs  tray.rs  tray_state.rs  watch.rs
client/src/cli/: agent.rs  conflicts.rs  events.rs  history.rs  hub_service.rs  hydrate.rs  mcp.rs  mod.rs  pair.rs  recovery.rs  serve.rs  service.rs  start.rs  sync.rs  tray.rs  update.rs  util.rs  workspace.rs
client/src/migrate_sqlite/: cache.rs  hub.rs  journal.rs  mod.rs  tests.rs
client/tests/: contract_snapshots.rs  local_hub_parity.rs  native_tls.rs  recovery_cli.rs  sync_engine.rs  tray_contract_snapshots.rs
client/tests/snapshots/: agent_check_json.json  agent_clean_json.json  agent_land_json.json  agent_list_json.json  agent_list_offline_json.json  agent_refresh_json.json  conflict_keep_json.json  conflict_show_json.json  log_json.json  recent_workspaces_json.json  spawn_json.json  tray_pause_json.json  tray_status_json.json  undo_json.json
client/tests/support/: mod.rs
common/: AGENTS.md  CHANGELOG.md  Cargo.toml  release-product-state.txt
common/src/: agent_contract.rs  invite.rs  lib.rs  sync_delta.rs  three_way.rs  tray_contract.rs  tree.rs  tree_codec.rs  tree_convert.rs  tree_diff.rs
common/tests/: sync_models.rs  tree_models.rs
docs/: agent-api.md  architecture.md  deploy-relay.md  roadmap.md  sync-scope.md  threat-model.md  usage.md
examples/: sdk-agent-loop.sh
examples/zig-agent/: README.md  build.zig  main.zig
feanorfs-ffi/: Cargo.toml  build.rs  cbindgen.toml  feanorfs.h
feanorfs-ffi/src/: lib.rs
scripts/: AGENTS.md  check-release-readiness.sh  demo-agent-loop.sh  install-macos.sh  install.ps1  install.sh  linux-package.nfpm.yaml  package-linux.sh  package-macos.sh  smoke-linux-packages.sh  smoke-macos-keychain.sh  smoke-macos-product.sh  smoke-relay-container.sh  smoke-test.sh  smoke-windows-installer.ps1  smoke-windows-product.ps1  test-install-routing.ps1  test-install-routing.sh  update-release-product-state.sh  windows-installer.iss
server/: AGENTS.md  CHANGELOG.md  Cargo.toml
server/src/: app.rs  db.rs  gc.rs  lib.rs  main.rs  private_file.rs  recovery.rs  serve.rs  tls.rs
server/src/app/: AGENTS.md  guards.rs  routes_legacy.rs  routes_objects.rs  routes_pair_relay.rs  routes_publication.rs  routes_tunnel_relay.rs  tests.rs
server/src/app/tests/: publication.rs  validation.rs
server/tests/: pair_relay.rs  tunnel_relay.rs
tray/: AGENTS.md  Cargo.toml  README.md
tray/assets/: AGENTS.md  com.feanorfs.tray.desktop
tray/src/: feanorfs.rs  icons.rs  main.rs  password_dialog.rs  ui.rs
