[workspace]
members = ["common", "server", "client", "agent-core", "feanorfs-ffi", "bindings/ts", "tray"]
resolver = "2"

[workspace.package]
version = "0.3.3"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["Raul Puigbó <raulapuigbo@gmail.com>"]
repository = "https://github.com/rapm94/feanorfs"
homepage = "https://github.com/rapm94/feanorfs"
readme = "README.md"
keywords = ["sync", "filesystem", "e2ee", "blake3", "sqlite"]
categories = ["command-line-utilities", "filesystem"]

[workspace.dependencies]
feanorfs-common = { version = "0.3.0", path = "common" }
feanorfs-server = { version = "0.3.0", path = "server" }
feanorfs-agent-core = { version = "0.3.0", path = "agent-core" }
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
ignore = "0.4"
notify = "6.1"
blake3 = "1.5"
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.10"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mdns-sd = "0.20"
getrandom = "0.2"
which = "7"
rpassword = "7"
constant_time_eq = "0.4"
chacha20poly1305 = "0.10"
reflink = "0.1"
unicode-normalization = "0.1"
diffy = "0.4"
urlencoding = "2"
tower = "0.5"
http = "1"
tokio-util = { version = "0.7", features = ["io"] }
if-addrs = "0.13"

[profile.release]
strip = true
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

