[workspace]
members = ["common", "server", "client", "agent-core", "feanorfs-ffi", "bindings/ts", "tray"]
resolver = "2"

[workspace.package]
version = "0.7.9"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["Raul Puigbó <raulapuigbo@gmail.com>"]
repository = "https://github.com/rapm94/feanorfs"
homepage = "https://github.com/rapm94/feanorfs"
readme = "README.md"
keywords = ["sync", "filesystem", "e2ee", "blake3", "sqlite"]
categories = ["command-line-utilities", "filesystem"]

[workspace.dependencies]
feanorfs-common = { version = "0", path = "common" }
feanorfs-server = { version = "0", path = "server" }
feanorfs-agent-core = { version = "0", path = "agent-core" }
napi = { version = "3", default-features = false, features = ["napi4"] }
napi-derive = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0.28"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
# SQLx 0.9 requires Rust 1.94; 0.8 is the newest line compatible with MSRV 1.88.
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite"] }
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.13.4", features = ["json", "multipart", "stream"] }
ignore = "0.4"
# notify 9 is prerelease-only.
notify = "8.2"
blake3 = "1.5"
axum = { version = "0.8.9", features = ["multipart", "ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower-http = { version = "0.7", features = ["fs", "trace"] }
futures-util = "0.3"
# tokio-tungstenite 0.30 supports this MSRV, but current Axum 0.8.9 selects
# 0.29. Keep one WebSocket protocol stack until Axum advances its dependency.
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.10"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mdns-sd = "0.20.2"
dns-sd-native = "0.1.1"
zbus = "5"
getrandom = "0.4"
which = "8"
rpassword = "7"
# constant_time_eq 0.5 requires Rust 1.95.
constant_time_eq = "0.4"
chacha20poly1305 = "0.11"
# Latest stable line; 0.6 is pre-release. Direct KDF use does not need password-hash/rand.
argon2 = { version = "0.5.3", default-features = false, features = ["alloc", "zeroize"] }
base64 = "0.22.1"
reflink = "0.1"
unicode-normalization = "0.1"
diffy = "0.5"
urlencoding = "2"
tower = "0.5"
http = "1"
tokio-util = { version = "0.7", features = ["io"] }
if-addrs = "0.15"
service-manager = { version = "0.11", default-features = false }
# spake2 0.5 is prerelease-only.
spake2 = "0.4"
zeroize = { version = "1", features = ["derive"] }
rcgen = { version = "0.14.8", features = ["x509-parser", "zeroize"] }
keyring = "4.1.5"
windows-sys = "0.61"

[profile.release]
strip = true
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
