[package]
name = "feanorfs-agent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Embeddable agent workspace isolation for FeanorFS (spawn, land, conflicts)"

[lib]
name = "feanorfs_agent_core"
path = "src/lib.rs"

[dependencies]
feanorfs-common = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
urlencoding = { workspace = true }
ignore = { workspace = true }
reflink = { workspace = true }
unicode-normalization = { workspace = true }
diffy = { workspace = true }
tracing = { workspace = true }
libc = "0.2"
fs2 = "0.4"
atomic-write-file = "0.3"
url = "2"
constant_time_eq = { workspace = true }
keyring = { workspace = true }
zeroize = { workspace = true }
getrandom = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = { workspace = true }
