[package]
name = "feanorfs-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Developer-focused zero-knowledge filesystem sync CLI"

[[bin]]
name = "feanorfs"
path = "src/main.rs"

[dependencies]
feanorfs-common = { path = "../common" }
tokio = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
notify = { workspace = true }
ignore = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mdns-sd = { workspace = true }

