[package]
name = "feanorfs-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Developer-focused zero-knowledge filesystem sync CLI"

[[bin]]
name = "feanorfs"
path = "src/main.rs"

[lib]
name = "feanorfs_client"
path = "src/lib.rs"

[dependencies]
feanorfs-common = { path = "../common" }
tokio = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
notify = { workspace = true }
ignore = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mdns-sd = { workspace = true }
which = { workspace = true }
rpassword = { workspace = true }

[dev-dependencies]
feanorfs-server = { path = "../server" }
tempfile = { workspace = true }
axum = { workspace = true }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ bin }-v{ version }-{ target }{ binary-ext }"
pkg-fmt = "bin"

