[package]
name = "feanorfs-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Developer-focused zero-knowledge filesystem sync CLI"

[[bin]]
name = "feanorfs"
path = "src/main.rs"

[lib]
name = "feanorfs_client"
path = "src/lib.rs"

[dependencies]
feanorfs-common = { path = "../common" }
feanorfs-server = { path = "../server" }
tokio = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
notify = { workspace = true }
ignore = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
urlencoding = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mdns-sd = { workspace = true }
which = { workspace = true }
rpassword = { workspace = true }
reflink = { workspace = true }
unicode-normalization = { workspace = true }
diffy = { workspace = true }

[dev-dependencies]
feanorfs-server = { path = "../server" }
tempfile = { workspace = true }
axum = { workspace = true }

[package.metadata.binstall]
# Artifacts are built by cargo-dist (see dist-workspace.toml).
pkg-url = "{ repo }/releases/download/v{ version }/feanorfs-client-{ target }.tar.xz"
pkg-fmt = "txz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/feanorfs-client-{ target }.zip"
pkg-fmt = "zip"

