[package]
name = "feanorfs-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared data models and Blake3 XOF encryption primitives for FeanorFS"

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
anyhow.workspace = true
chrono.workspace = true
getrandom.workspace = true
chacha20poly1305.workspace = true
