[package]
name = "feanorfs-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Content-addressed blob storage and sync metadata server for FeanorFS"

[package.metadata.dist]
# The supported hub ships inside `feanorfs serve`; keep this compatibility
# binary source-buildable without duplicating every release artifact.
dist = false

[lib]
name = "feanorfs_server"
path = "src/lib.rs"

[[bin]]
name = "feanorfs-server"
path = "src/main.rs"

[dependencies]
feanorfs-common = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mdns-sd = { workspace = true }
constant_time_eq = { workspace = true }
tokio-util = { workspace = true }
if-addrs = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
