[package]
name = "feanorfs-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Content-addressed blob storage and sync metadata server for FeanorFS"

[package.metadata.dist]
# The supported hub ships inside `feanorfs serve`; keep this compatibility
# binary source-buildable without duplicating every release artifact.
dist = false

[lib]
name = "feanorfs_server"
path = "src/lib.rs"

[[bin]]
name = "feanorfs-server"
path = "src/main.rs"

[dependencies]
feanorfs-common = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mdns-sd = { workspace = true }
constant_time_eq = { workspace = true }
tokio-util = { workspace = true }
if-addrs = { workspace = true }
tower = { workspace = true }
rcgen = { workspace = true }
zeroize = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
chacha20poly1305 = { workspace = true }
getrandom = { workspace = true }
atomic-write-file = "0.3"
fs2 = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
dns-sd-native = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
