[package]
name = "feanorfs-agent-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Node.js native bindings for FeanorFS agent SDK"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
feanorfs-agent-core = { workspace = true }
feanorfs-common = { workspace = true }
napi = { workspace = true, features = ["napi4", "async"] }
napi-derive = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
napi-build = "2"
